Add directory controller.

--- a/website/app/index.html
+++ b/website/app/index.html
@@ -159,6 +159,7 @@
 <script src="application/core/projects/project/files/files-controller.js"></script>
 <script src="application/core/projects/project/files/files-all-controller.js"></script>
 <script src="application/core/projects/project/files/file-edit-controller.js"></script>
+<script src="application/core/projects/project/files/files-dir-controller.js"></script>
 <script src="application/core/projects/project/files/files-by-type-controller.js"></script>
 <script src="application/core/projects/project/files/files-images-controller.js"></script>
 <script src="application/core/projects/project/files/files-search-controller.js"></script>
