--- a/website/app/application/core/projects/project/processes/measurements.html
+++ b/website/app/application/core/projects/project/processes/measurements.html
@@ -2,7 +2,7 @@
     <form name="measurementsForm" novalidate>
         <div class="modal-header">
             <button type="button" class="close pull-right" ng-click="cancel()" aria-hidden="true">&times;</button>
-            <h3 class="modal-title">Choose Measurement</h3>
+            <h3 class="modal-title">Choose Measurement for {{modal.sample.name}}</h3>
         </div>
         <br>
 
@@ -41,7 +41,6 @@
                     </div>
 
                     <!--</div>-->
-
                 </div>
             </div>
         </div>
