--- a/website/app/index.html
+++ b/website/app/index.html
@@ -163,6 +163,7 @@
 <script src="application/core/projects/project/files/files-by-type-controller.js"></script>
 <script src="application/core/projects/project/files/files-images-controller.js"></script>
 <script src="application/core/projects/project/files/files-search-controller.js"></script>
+<script src="application/core/projects/project/files/display-file-contents-directive.js"></script>
 <script src="application/core/projects/project/access/access-controller.js"></script>
 <script src="application/core/projects/project/reviews/reviews-controller.js"></script>
 <script src="application/core/projects/project/reviews/review-create-controller.js"></script>
