Remove extra space in class declaration list.

--- a/website/app/application/core/projects/project/reviews/reviews.html
+++ b/website/app/application/core/projects/project/reviews/reviews.html
@@ -24,7 +24,7 @@
                     <div class="row">
                         <div style="text-align: center;margin-top: 20px;">
                             <button ui-sref="projects.project.reviews.create"
-                                    class="btn-review  btn-details-container btn btn-default"> create
+                                    class="btn-review btn-details-container btn btn-default"> create
                             </button>
                         </div>
                     </div>
@@ -47,7 +47,7 @@
                     </ul>
                 </div>
             </div>
-            <div class="col-xs-8" stylex="margin-left: 10px;">
+            <div class="col-xs-8">
                 <div ui-view></div>
             </div>
         </div>
