--- a/website/app/application/core/projects/project/files/edit.html
+++ b/website/app/application/core/projects/project/files/edit.html
@@ -2,8 +2,15 @@
     <div class="col-xs-12 no-padding">
         <div class="details-main-content full-height">
             <ul class="list-inline no-bottom-margin">
-                <li><span class="heading-label-lg" style="color: #c3c3c3">{{file.active.name}}</span></li>
-                <li><a ng-click="file.rename()" class="heading-label text-uppercase">rename</a></li>
+                <li>
+                    <span ng-if="!file.renameActive" class="heading-label-lg" style="color: #c3c3c3">{{file.active.name}}</span>
+                    <span ng-if="file.renameActive">
+                        <input type="text" ng-model="file.newName">
+                        <button class="btn btn-files">Done</button>
+                        <button class="btn btn-danger">Cancel</button>
+                    </span>
+                </li>
+                <li><a ng-click="file.renameActive = !file.renameActive" class="heading-label text-uppercase">rename</a></li>
                 <li>
                     <a ng-href="{{file.downloadSrc(file.active)}}"
                        class="heading-label text-uppercase"
@@ -29,7 +36,7 @@
 
             <div class="row">
                 <div class="section">
-                    <display-file file="file.active"></display-file>
+                    <display-file-contents file="file.active"></display-file-contents>
                 </div>
             </div>
 
