--- a/website/app/application/core/projects/project/processes/files.html
+++ b/website/app/application/core/projects/project/processes/files.html
@@ -1,31 +1,59 @@
 <div class="tab-pane">
-    <div class="tab-pane">
-        <table class="table">
-            <thead>
-            <tr>
-                <th>Details</th>
-                <th>Notes</th>
-            </tr>
-            </thead>
-            <tbody>
-            <tr ng-repeat="file in current.files_used">
-                <td>
-                    <b><a ui-sref="projects.project.files.all.edit({file_id: file.id,
+    <div ng-if="current.files_used.length === 0 && current.files_produced.length === 0">
+        No files
+    </div>
+    <table ng-if="current.files_used.length !== 0"class="table">
+        <thead>
+        <tr>
+            <th>Input File Details</th>
+            <th>Image</th>
+        </tr>
+        </thead>
+        <tbody>
+        <tr ng-repeat="file in current.files_used">
+            <td>
+                <b><a ui-sref="projects.project.files.all.edit({file_id: file.id,
                     file_type: file.type})">{{file.name}}</a></b>
 
-                    <div style="padding-bottom: 15px;">
-                        <p style="font-size: 12px;padding-bottom: 10px;">
-                            {{file.birthtime | toDateString}}
-                            <span style="padding-left: 10px">{{file.owner}}</span>
-                            <span style="padding-left: 10px">{{file.size | bytes}} </span>
-                        </p>
-                    </div>
-                </td>
-                <td>
-                    <img class="img-thumbnail" height="220" width="220" ng-src={{view.fileSrc(file.id)}}>
-                </td>
-            </tr>
-            </tbody>
-        </table>
-    </div>
+                <div style="padding-bottom: 15px;">
+                    <p style="font-size: 12px;padding-bottom: 10px;">
+                        {{file.birthtime | toDateString}}
+                        <span style="padding-left: 10px">{{file.owner}}</span>
+                        <span style="padding-left: 10px">{{file.size | bytes}} </span>
+                    </p>
+                </div>
+            </td>
+            <td>
+                <img class="img-thumbnail" height="220" width="220" ng-src={{view.fileSrc(file.id)}}>
+            </td>
+        </tr>
+        </tbody>
+    </table>
+    <table ng-if="current.files_produced.length !== 0" class="table">
+        <thead>
+        <tr>
+            <th>Output File Details</th>
+            <th>Image</th>
+        </tr>
+        </thead>
+        <tbody>
+        <tr ng-repeat="file in current.files_produced">
+            <td>
+                <b><a ui-sref="projects.project.files.all.edit({file_id: file.id,
+                    file_type: file.type})">{{file.name}}</a></b>
+
+                <div style="padding-bottom: 15px;">
+                    <p style="font-size: 12px;padding-bottom: 10px;">
+                        {{file.birthtime | toDateString}}
+                        <span style="padding-left: 10px">{{file.owner}}</span>
+                        <span style="padding-left: 10px">{{file.size | bytes}} </span>
+                    </p>
+                </div>
+            </td>
+            <td>
+                <img class="img-thumbnail" height="220" width="220" ng-src={{view.fileSrc(file.id)}}>
+            </td>
+        </tr>
+        </tbody>
+    </table>
 </div>
