--- a/website/app/application/core/projects/project/processes/view.html
+++ b/website/app/application/core/projects/project/processes/view.html
@@ -44,7 +44,7 @@
                     <!--<div ui-view=""></div>-->
                 <!--</div>-->
                 <ul class="nav nav-tabs">
-                    <li ng-class="{active:view.isSet('setup')}" class="active">
+                    <li ng-class="{active:view.isSet('setup')}">
                         <a ng-click="view.setTab('setup')"><b><i class="fa fa-fw fa-gear"></i>SETUP</b></a></li>
                     <li ng-class="{active:view.isSet('samples')}"><a ng-click="view.setTab('samples')"><b><i class="fa fa-fw fa-cubes"></i>SAMPLES</b></a></li>
                     <li ng-class="{active:view.isSet('files')}"><a ng-click="view.setTab('files')"><b><i class="fa fa-fw fa-copy"></i>FILES</b></a>
@@ -55,7 +55,7 @@
                        <setup-tab current="view.current"></setup-tab>
                     </div>
                     <div ng-show="view.isSet('samples')">
-                        <samples-tab current="view.current"></samples-tab>
+                        <samples-tab></samples-tab>
                     </div>
                     <div ng-show="view.isSet('files')">
                         <files-tab current="view.current"></files-tab>
