--- a/website/app/application/core/projects/project/processes/setup.html
+++ b/website/app/application/core/projects/project/processes/setup.html
@@ -1,10 +1,20 @@
-<div  class="tab-pane active">
+<div class="tab-pane active">
     <div ng-if="view.current.setup[0].setupproperties.length === 0">
-         No Setup information
+        No Setup information
     </div>
-    <ul>
-        <li ng-repeat="property in view.current.setup[0].setupproperties" ng-if="property.value">
-            {{property.name}} :: {{property.value}} {{property.units}}
-        </li>
-    </ul>
+
+    <table ng-if="view.current.setup[0].setupproperties.length !== 0" class="table">
+        <thead>
+        <tr>
+            <th>Name</th>
+            <th>Value</th>
+        </tr>
+        </thead>
+        <tbody>
+        <tr ng-repeat="property in view.current.setup[0].setupproperties">
+            <td style="height: 0px;"> {{property.name}}</td>
+            <td style="height: 0px;">{{property.value}} {{property.units}}</td>
+        </tr>
+        </tbody>
+    </table>
 </div>
