--- a/website/app/index.html
+++ b/website/app/index.html
@@ -268,6 +268,7 @@
 <script src="application/core/projects/project/processes/samples-tab-directive.js"></script>
 <script src="application/core/projects/project/processes/files-tab-directive.js"></script>
 <script src="application/core/projects/project/processes/setup-tab-directive.js"></script>
+<script src="application/core/projects/project/processes/display-image-tab-directive.js"></script>
 <script src="application/core/components/properties/partials/display-measurement-directive.js"></script>
 <script src="application/core/projects/project/processes/line-graph-controller.js"></script>
 <script src="application/core/projects/project/processes/histogram-controller.js"></script>
