--- a/website/app/application/core/projects/project/processes/list.html
+++ b/website/app/application/core/projects/project/processes/list.html
@@ -3,15 +3,15 @@
         <div class="details-sidebar" style=" margin-bottom: -900px;padding-bottom: 900px;">
             <div class="row">
                 <div style="text-align: center; margin-top: 20px;">
-                    <button ng-click="chooseTemplate()" class="btn-details-container btn-process btn btn-default"> create</button>
+                    <button ng-click="processlist.chooseTemplate()" class="btn-details-container btn-process btn btn-default"> create</button>
                 </div>
             </div>
             <ul  class="list-group">
                 <li ui-sref="projects.project.processes.list.view({'process_id': process.id})"
                     ng-class="{'process': current.id === process.id}"
                     class="list-group-item pointer"
-                    ng-repeat="process in project.processes"
-                        ng-click="viewProcess(process)">
+                    ng-repeat="process in processlist.processes"
+                        ng-click="processlist.viewProcess(process)">
                     <img src="assets/img/splash/process-icon.png" style="height: 35px;padding-bottom: 10px;">
                     {{process.name}}
                 </li>
