Fix class reference.

--- a/website/app/application/core/projects/project/project-nav-bar.html
+++ b/website/app/application/core/projects/project/project-nav-bar.html
@@ -8,7 +8,7 @@
                     {{navbar.project.name | truncate: 25: '...'}} <span class="white badge" style="float: none;">{{navbar.projects.length}}</span>
                     <span class="caret"></span>
                 </a>
-                <ul class="dropdown-menu projects-dropdown nav-dropdown-scrollbar" role="menu">
+                <ul class="dropdown-menu projects-drop-down nav-dropdown-scrollbar" role="menu">
                     <li data-toggle="modal"
                         data-target="#newProject"><a><i class="fa fa-fw fa-plus"></i>New Project</a></li>
                     <li class="divider"></li>
