--- a/website/app/application/core/projects/project/files/files.html
+++ b/website/app/application/core/projects/project/files/files.html
@@ -1,5 +1,5 @@
 <div class="row">
-    <div class="col-xs-12 details-container files-container">
+    <div ng-if="false" class="col-xs-12 details-container files-container">
         <nav class="navbar navbar-default">
             <div class="collapse navbar-collapse">
                 <ul class="nav navbar-nav">
@@ -12,7 +12,7 @@
             </div>
         </nav>
     </div>
-    <div class="row" stylex="margin-top: 20px;">
+    <div class="row" style="margin-top: 20px;">
         <div class="col-xs-12" style="padding-left: 0px; padding-right: 0px">
             <div ui-view></div>
         </div>
