--- a/website/app/application/core/projects/project/files/all.html
+++ b/website/app/application/core/projects/project/files/all.html
@@ -2,8 +2,9 @@
     <div class="col-xs-3 no-padding">
         <div class="details-sidebar full-height">
             <div class="row">
-                <span class="file heading-label text-uppercase">file tree </span>
-                <hr class="heading-label">
+                <div class="">
+                    <h4 class="file-color text-uppercase text-center">file tree </h4>
+                </div>
             </div>
             <div class="row">
                 <file-upload-panel></file-upload-panel>
