Rework how our pages laid out.

--- a/website/app/application/core/projects/project/files/all.html
+++ b/website/app/application/core/projects/project/files/all.html
@@ -1,6 +1,6 @@
 <div class="row">
     <div class="col-xs-3 no-padding">
-        <div class="details-sidebar full-height">
+        <div class="details-sidebar">
             <div class="row">
                 <div class="">
                     <h4 class="file-color text-uppercase text-center">file tree </h4>
