--- a/website/app/application/core/projects/project/files/edit.html
+++ b/website/app/application/core/projects/project/files/edit.html
@@ -1,6 +1,6 @@
 <div class="row ">
     <div class="col-xs-12 no-padding">
-        <div class="details-main-content full-height">
+        <div class="details-main-content">
             <ul class="list-inline no-bottom-margin">
                 <li>
                     <h2 class="file-color" ng-if="!file.renameActive">{{file.active.name}}</h2>
