--- a/website/app/application/core/projects/project/files/files.html
+++ b/website/app/application/core/projects/project/files/files.html
@@ -1,20 +1,24 @@
-<div class="row">
-    <div ng-if="false" class="col-xs-12 details-container files-container">
-        <nav class="navbar navbar-default">
-            <div class="collapse navbar-collapse">
-                <ul class="nav navbar-nav">
-                    <li ui-sref-active="active"><a ui-sref="projects.project.files.all">all Files</a></li>
-                    <li ng-if="false" ui-sref-active="active"><a ui-sref="projects.project.files.images">images</a></li>
-                    <li ng-if="false" ui-sref-active="active"><a ui-sref="projects.project.files.types">by type</a></li>
-                </ul>
-                <input ng-if="false" class="pull-right col-xs-6" style="margin-top: 15px; background-color: #D2C4D5"
-                       type="text" placeholder="SEARCH..." on-enter="files.showSearchResults()">
+<div class="box">
+    <div class="row">
+        <div ng-if="false" class="col-xs-12 details-container files-container">
+            <nav class="navbar navbar-default">
+                <div class="collapse navbar-collapse">
+                    <ul class="nav navbar-nav">
+                        <li ui-sref-active="active"><a ui-sref="projects.project.files.all">all Files</a></li>
+                        <li ng-if="false" ui-sref-active="active"><a ui-sref="projects.project.files.images">images</a>
+                        </li>
+                        <li ng-if="false" ui-sref-active="active"><a ui-sref="projects.project.files.types">by type</a>
+                        </li>
+                    </ul>
+                    <input ng-if="false" class="pull-right col-xs-6" style="margin-top: 15px; background-color: #D2C4D5"
+                           type="text" placeholder="SEARCH..." on-enter="files.showSearchResults()">
+                </div>
+            </nav>
+        </div>
+        <div class="row content" style="margin-top: 20px;">
+            <div class="col-xs-12" style="padding-left: 0px; padding-right: 0px">
+                <div ui-view></div>
             </div>
-        </nav>
-    </div>
-    <div class="row" style="margin-top: 20px;">
-        <div class="col-xs-12" style="padding-left: 0px; padding-right: 0px">
-            <div ui-view></div>
         </div>
     </div>
 </div>
